# pythonisms

./: README.md  pyproject.toml
pythonic/: test_pythonic.py
